@@ -99,6 +99,9 @@
          "requires" : {
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
+            "Git::Wrapper" : "0",
+            "Path::Tiny" : "0.079",
+            "Test::DZil" : "0",
             "Test::More" : "0.88"
          }
       }
@@ -166,11 +169,6 @@
             "version" : "0.161170"
          },
          {
-            "class" : "Dist::Zilla::Plugin::GenerateFile",
-            "name" : "@Author::DBOOK/Generate_Contrib",
-            "version" : "6.006"
-         },
-         {
             "class" : "Dist::Zilla::Plugin::MetaConfig",
             "name" : "@Author::DBOOK/MetaConfig",
             "version" : "6.006"
@@ -235,7 +233,6 @@
                },
                "Dist::Zilla::Role::Git::DirtyFiles" : {
                   "allow_dirty" : [
-                     "CONTRIBUTING.md",
                      "Changes",
                      "INSTALL",
                      "LICENSE",
@@ -286,7 +283,6 @@
                },
                "Dist::Zilla::Role::Git::DirtyFiles" : {
                   "allow_dirty" : [
-                     "CONTRIBUTING.md",
                      "Changes",
                      "INSTALL",
                      "LICENSE",
@@ -405,7 +401,6 @@
                "Dist::Zilla::Plugin::GatherDir" : {
                   "exclude_filename" : [
                      "Build.PL",
-                     "CONTRIBUTING.md",
                      "INSTALL",
                      "LICENSE",
                      "META.json",
@@ -413,6 +408,7 @@
                      "Makefile.PL"
                   ],
                   "exclude_match" : [
+                     "^CONTRIBUTING\\.",
                      "^profiles/default/skel/"
                   ],
                   "follow_symlinks" : 0,
